added user preference type and dependencies
